2019-04-16 Added new custom addon editable window
2019-04-11 Fixed issue with the dotted button in Navigation Bar and added Block not visited pages property
2019-04-10 Added setContextMetadata to player API
2019-04-10 Added lock and unlock commands and weight property in Paragraph and Paragraph Keyboard modules
2019-04-04 Added 'no audio' option to the slideshow addon
2019-04-04 Fixed calculating max score in Choice module
2019-04-02 Fixed setting isEnable property in Text Audio module
2019-04-01 Added refreshing mathjax in filled gap in Text module
2019-04-01 Added bookmarks to Navigation Bar
2019-03-13 Fixed issue with dropdown gap editor when 'keep in order' is disabled
2019-03-12 Fixed setting state in Basic Math Gaps module
2019-03-06 Fixed problem with not selectable placeholder text in filled gap after reset command
2019-03-04 Added showAnswers, hideAnswers, enable and disable commands in True False module
2019-02-28 Fixed problem with setting state in Text Audio module
2019-02-26 Added Manual grading and Title properties in Paragraph and Paragraph Keyboard modules
2019-02-21 Fix for problem with dissapearing Source List items after drag stop
2019-02-08 Fixed adding selectable characters in word in Text Coloring
2019-01-31 Added starting values to connection modules
2019-01-28 Fixed problem with recreating gaps on show command
2019-01-22 Fixed getting error count in Shooting Range module
2019-01-21 Added disable and enable commands for TextAudio addon
2019-01-14 Added new addon Limited Submit
2019-01-14 Fixed a model in media recorder addon
2019-01-14 Added a end of game event to a shooting range addon
2019-01-14 Fixed setting state in Coloring module
2019-01-14 Fixed the problem of latex reloading in a quiz addon
2019-01-11 Added disable enable commands to Media Recorder addon
2019-01-10 Fixed view shift on mobile devices in Points and lines, Connecting dots, Coloring
2019-01-10 Added commands to Text, Ordering, Image Gap and Choice